Terminada al completo la nueva FAse 10
